--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,8 +191,8 @@ progress::-moz-progress-value {
     margin: 0 auto;
     margin-top:20px;
     margin-bottom: 10px;
-    background-image:url('static/image/weixin.png');
-    background-size: 120%;
+    background-image:url('../image/portrait.png');
+    background-size: 88%;
     background-position:center;
     border-radius:50%;
     border:5px solid #607d8b;
