--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,43 +1,100 @@
-@font-face {font-family: 'iconfont';
-    src: url('../fonts/iconfont.eot'); /* IE9*/
-    src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/iconfont.woff') format('woff'), /* chrome、firefox */
-    url('../fonts/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('../fonts/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+@font-face {
+    font-family: 'iconfont';
+    src: url('../fonts/iconfont.eot');
+    /* IE9*/
+    src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/iconfont.woff') format('woff'),
+        /* chrome、firefox */
+        url('../fonts/iconfont.ttf') format('truetype'),
+        /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+        url('../fonts/iconfont.svg#iconfont') format('svg');
+    /* iOS 4.1- */
 }
 
 
-.icon-work:before { content: "\eac9"; }
-.icon-project:before { content: "\eaf4"; }
-.icon-phone:before { content: "\ec7a"; }
-.icon-stars:before { content: "\ed32"; }
-.icon-star:before { content: "\ed1d"; }
-.icon-person:before { content: "\ec88"; }
-.icon-librarybooks:before { content: "\ebf9"; }
-.icon-education:before { content: "\ebca"; }
-.icon-create:before { content: "\eaf8"; }
-.icon-call:before { content: "\eab6"; }
-.icon-weixin:before { content: "\3488"; }
-.icon-build:before { content: "\eaa2"; }
-.icon-edit:before { content: "\eb31"; }
-.icon-flower:before { content: "\ec0a"; }
-.icon-playlistadd:before { content: "\ecae"; }
-.icon-delete:before { content: "\e61b"; }
-.icon-trophy:before { content: "\e80b"; }
+.icon-work:before {
+    content: "\eac9";
+}
+
+.icon-project:before {
+    content: "\eaf4";
+}
+
+.icon-phone:before {
+    content: "\ec7a";
+}
+
+.icon-stars:before {
+    content: "\ed32";
+}
+
+.icon-star:before {
+    content: "\ed1d";
+}
+
+.icon-person:before {
+    content: "\ec88";
+}
+
+.icon-librarybooks:before {
+    content: "\ebf9";
+}
+
+.icon-education:before {
+    content: "\ebca";
+}
+
+.icon-create:before {
+    content: "\eaf8";
+}
+
+.icon-call:before {
+    content: "\eab6";
+}
+
+.icon-weixin:before {
+    content: "\3488";
+}
+
+.icon-build:before {
+    content: "\eaa2";
+}
+
+.icon-edit:before {
+    content: "\eb31";
+}
+
+.icon-flower:before {
+    content: "\ec0a";
+}
+
+.icon-playlistadd:before {
+    content: "\ecae";
+}
+
+.icon-delete:before {
+    content: "\e61b";
+}
+
+.icon-trophy:before {
+    content: "\e80b";
+}
 
 span {
     display: inline-block;
 }
 
-.label-value{
+.label-value {
     width: 200px;
     vertical-align: top;
 }
 
 .iconfont {
-    font-family:"iconfont" !important;
-    font-size:1.1em;font-style:normal;
-    color:inherit;
+    font-family: "iconfont" !important;
+    font-size: 1.1em;
+    font-style: normal;
+    color: inherit;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
@@ -47,10 +104,14 @@ span {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 0; 
+    margin: 0;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-weight: 500;
     color: #607d8b;
     line-height: 1.5;
@@ -61,7 +122,8 @@ h1, h2, h3, h4, h5 {
     margin-left: 200px;
 }
 
-.info-list, .progress-list{
+.info-list,
+.progress-list {
     list-style: none;
     padding-left: 0px;
     font-size: 16px;
@@ -104,7 +166,7 @@ hr {
     font-size: 20px;
     padding: 6px;
     color: #666;
-    
+
 }
 
 .remodal-img button {
@@ -113,7 +175,7 @@ hr {
 
 }
 
-.remodal-img button:hover{
+.remodal-img button:hover {
     float: right;
     background: #607d8b;
 
@@ -126,8 +188,7 @@ body {
     zoom: 80%;
 }
 
-footer {
-}
+footer {}
 
 p {
     line-height: 1.5;
@@ -169,16 +230,16 @@ progress::-moz-progress-value {
     margin-bottom: 20px;
 }
 
-.weixin{
+.weixin {
     margin-top: 20px;
-    background-color: #e0eaf0;   
+    background-color: #e0eaf0;
     position: relative;
     padding-top: 40px;
     padding-bottom: 40px;
     text-align: center;
 }
 
-.weixin img{
+.weixin img {
     width: 200px;
 }
 
@@ -189,44 +250,41 @@ progress::-moz-progress-value {
 
 .portrait {
     margin: 0 auto;
-    margin-top:20px;
+    margin-top: 20px;
     margin-bottom: 10px;
-    background-image:url('../image/portrait.png');
+    background-image: url('../image/portrait.png');
     background-size: 88%;
-    background-position:center;
-    border-radius:50%;
-    border:5px solid #607d8b;
-    width:160px;
-    height:160px;
+    background-position: center;
+    border-radius: 50%;
+    border: 5px solid #607d8b;
+    width: 160px;
+    height: 160px;
 }
 
 
+/* 修改容器样式，移除固定高度限制 */
 .container {
-    position: relative;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
-
-    width: 1050px;
-    height: 1550px;
-    background-color: white;
-
-}
-
-.side {
-    position: absolute;
-    width: 360px;
-    height: 100%;
-    background-color: whitesmoke;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.main {
-    
-    position: relative;;
-    margin-left: 360px;
-    min-height: 100%;
     padding: 20px;
+    display: flex;
+    min-height: 100vh; /* 确保最小高度为视窗高度 */
+}
 
+/* 修改侧边栏样式，使其高度自适应 */
+.side {
+    width: 35%;
+    padding: 20px;
+    background: #f5f5f5;
+    position: relative; /* 改为相对定位 */
+}
+
+/* 修改主内容区样式，使其高度自适应 */
+.main {
+    width: 65%;
+    padding: 20px;
+    background: #fff;
 }
 
 .info-header:hover {
@@ -251,40 +309,38 @@ progress::-moz-progress-value {
     margin-right: 2px;
     visibility: hidden;
     cursor: pointer;
-    
+
 }
 
- .item-remove {
+.item-remove {
     position: absolute;
     right: 2px;
     margin-right: 2px;
     visibility: hidden;
     cursor: pointer;
-    
+
 }
 
-ul li{
+ul li {
     position: relative;
 }
 
- .experience-list .item-remove {
+.experience-list .item-remove {
     position: absolute;
     right: 2px;
     top: 0px;
     margin-right: 2px;
     visibility: hidden;
     cursor: pointer;
-    
+
 }
 
- .stack-list .item-remove {
+.stack-list .item-remove {
     position: absolute;
     right: 2px;
     top: 0px;
     margin-right: 2px;
     visibility: hidden;
     cursor: pointer;
-    
+
 }
-
-
